# Rust-Backend

./: .env  Cargo.toml  README.md  diesel.toml  docker-compose.yml
migrations/2025-06-07-120318_user/: up.sql
src/: db.rs  main.rs  schema.rs
src/auth/: extractor.rs  handler.rs  mod.rs  routes.rs  service.rs  user.rs
src/models/: Token.rs
src/pivot/: routes.rs
